@@ -27,255 +27,221 @@ import org.apache.roller.weblogger.pojos.Weblog;
 import org.apache.roller.weblogger.pojos.WeblogTheme;
 import org.apache.roller.weblogger.util.URLUtilities;
 
-
 /**
  * A URLStrategy used by the preview rendering system.
  */
 public class PreviewURLStrategy extends MultiWeblogURLStrategy {
-    
+
     private final String previewTheme;
     private static final String PREVIEW_URL_SEGMENT = "/roller-ui/authoring/preview/";
-    
+
     public PreviewURLStrategy(String theme) {
         previewTheme = theme;
     }
-    
-    
+
     /**
      * Get root url for a given *preview* weblog.  
      * Optionally for a certain locale.
      */
     @Override
     public String getWeblogURL(Weblog weblog, String locale, boolean absolute) {
-        
-        if(weblog == null) {
+        if (weblog == null) {
             return null;
         }
-        
-        StringBuilder url = new StringBuilder(URL_BUFFER_SIZE);
-        
-        if(absolute) {
-            url.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
-        } else {
-            url.append(WebloggerRuntimeConfig.getRelativeContextURL());
-        }
-        
-        url.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
-        
-        if(locale != null) {
-            url.append(locale).append('/');
-        }
-        
-        Map<String, String> params = Collections.emptyMap();
-        if(previewTheme != null) {
-            params = Map.of("theme", URLUtilities.encode(previewTheme));
-        }
-        
-        return url.append(URLUtilities.getQueryString(params)).toString();
+
+        return buildPreviewURL(weblog, locale, absolute, Collections.emptyMap());
     }
-    
-    
+
     /**
      * Get url for a given *preview* weblog entry.  
      * Optionally for a certain locale.
      */
     @Override
-    public String getWeblogEntryURL(Weblog weblog,
-                                    String locale,
-                                    String previewAnchor,
-                                    boolean absolute) {
-        
-        if(weblog == null) {
+    public String getWeblogEntryURL(Weblog weblog, String locale, String previewAnchor, boolean absolute) {
+        if (weblog == null) {
             return null;
         }
 
-        StringBuilder url = new StringBuilder(URL_BUFFER_SIZE);
-        
-        if(absolute) {
-            url.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
-        } else {
-            url.append(WebloggerRuntimeConfig.getRelativeContextURL());
-        }
-        
-        url.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
-        
-        if(locale != null) {
-            url.append(locale).append('/');
-        }
-        
         Map<String, String> params = new HashMap<>();
-        if(previewTheme != null) {
+        if (previewTheme != null) {
             params.put("theme", URLUtilities.encode(previewTheme));
         }
-        if(previewAnchor != null) {
+        if (previewAnchor != null) {
             params.put("previewEntry", URLUtilities.encode(previewAnchor));
         }
-        
-        return url.append(URLUtilities.getQueryString(params)).toString();
+
+        return buildPreviewURL(weblog, locale, absolute, params);
     }
-    
-    
+
     /**
      * Get url for a collection of entries on a given weblog.
      */
     @Override
-    public String getWeblogCollectionURL(Weblog weblog,
-                                                      String locale,
-                                                      String category,
-                                                      String dateString,
-                                                      List<String> tags,
-                                                      int pageNum,
-                                                      boolean absolute) {
-        
-        if(weblog == null) {
+    public String getWeblogCollectionURL(Weblog weblog, String locale, String category, String dateString, List<String> tags, int pageNum, boolean absolute) {
+        if (weblog == null) {
             return null;
         }
 
-        StringBuilder pathinfo = new StringBuilder(URL_BUFFER_SIZE);
         Map<String, String> params = new HashMap<>();
-        
-        if(absolute) {
-        	pathinfo.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
-        } else {
-        	pathinfo.append(WebloggerRuntimeConfig.getRelativeContextURL());
+        if (dateString != null) {
+            params.put("date", dateString);
         }
-        
-        pathinfo.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
-        
-        if(locale != null) {
-        	pathinfo.append(locale).append('/');
+        if (category != null) {
+            params.put("cat", URLUtilities.encode(category));
         }
-
-        String cat;
-        if("root".equals(category)) {
-            cat = null;
-        } else {
-            cat = category;
+        if (tags != null && !tags.isEmpty()) {
+            params.put("tags", URLUtilities.getEncodedTagsString(tags));
         }
-        
-        if(cat != null && dateString == null) {
-            pathinfo.append("category/").append(URLUtilities.encodePath(cat));
-            
-        } else if(dateString != null && cat == null) {
-            pathinfo.append("date/").append(dateString);  
-        
-        } else if(tags != null && !tags.isEmpty()) {
-            pathinfo.append("tags/").append(URLUtilities.getEncodedTagsString(tags));
-        } else {
-            if (dateString != null) {
-                params.put("date", dateString);
-            }
-            if (cat != null) {
-                params.put("cat", URLUtilities.encode(cat));
-            }
-        }
-
-        if(pageNum > 0) {
+        if (pageNum > 0) {
             params.put("page", Integer.toString(pageNum));
         }
-        
-        if(previewTheme != null) {
+        if (previewTheme != null) {
             params.put("theme", URLUtilities.encode(previewTheme));
         }
 
-        return pathinfo.append(URLUtilities.getQueryString(params)).toString();
+        return buildCollectionURL(weblog, locale, category, dateString, tags, pageNum, absolute, params);
     }
-    
 
     /**
      * Get url for a custom page on a given weblog.
      */
     @Override
-    public String getWeblogPageURL(Weblog weblog,
-                                                String locale,
-                                                String pageLink,
-                                                String entryAnchor,
-                                                String category,
-                                                String dateString,
-                                                List<String> tags,
-                                                int pageNum,
-                                                boolean absolute) {
-        
-        if(weblog == null) {
+    public String getWeblogPageURL(Weblog weblog, String locale, String pageLink, String entryAnchor, String category, String dateString, List<String> tags, int pageNum, boolean absolute) {
+        if (weblog == null) {
             return null;
         }
-        
-        StringBuilder pathinfo = new StringBuilder(URL_BUFFER_SIZE);
-        Map<String, String> params = new HashMap<>();
-        
-        if(absolute) {
-            pathinfo.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
-        } else {
-            pathinfo.append(WebloggerRuntimeConfig.getRelativeContextURL());
-        }
-        
-        pathinfo.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
-        
-        if(locale != null) {
-            pathinfo.append(locale).append('/');
-        }
-        
-        if(previewTheme != null) {
-            params.put("theme", URLUtilities.encode(previewTheme));
-        }
-        
-        if(pageLink != null) {
-            pathinfo.append("page/").append(pageLink);
-            
-            // for custom pages we only allow query params
-            if(dateString != null) {
+
+        if (pageLink != null) {
+            Map<String, String> params = new HashMap<>();
+            if (dateString != null) {
                 params.put("date", dateString);
             }
-            if(category != null) {
+            if (category != null) {
                 params.put("cat", URLUtilities.encode(category));
             }
-            if(tags != null && !tags.isEmpty()) {
+            if (tags != null && !tags.isEmpty()) {
                 params.put("tags", URLUtilities.getEncodedTagsString(tags));
             }
-            if(pageNum > 0) {
+            if (pageNum > 0) {
                 params.put("page", Integer.toString(pageNum));
             }
+            if (previewTheme != null) {
+                params.put("theme", URLUtilities.encode(previewTheme));
+            }
+
+            return buildPageURL(weblog, locale, pageLink, absolute, params);
         } else {
-            // if there is no page link then this is just a typical collection url
             return getWeblogCollectionURL(weblog, locale, category, dateString, tags, pageNum, absolute);
         }
-        
-        return pathinfo.append(URLUtilities.getQueryString(params)).toString();
     }
-    
-    
+
     /**
      * Get a url to a *preview* resource on a given weblog.
      */
     @Override
     public String getWeblogResourceURL(Weblog weblog, String filePath, boolean absolute) {
-        
-        if(weblog == null) {
+        if (weblog == null) {
             return null;
         }
-        
+
+        Map<String, String> params = Collections.emptyMap();
+        if (previewTheme != null && !WeblogTheme.CUSTOM.equals(previewTheme)) {
+            params = Map.of("theme", URLUtilities.encode(previewTheme));
+        }
+
+        return buildResourceURL(weblog, filePath, absolute, params);
+    }
+
+    private String buildPreviewURL(Weblog weblog, String locale, boolean absolute, Map<String, String> params) {
         StringBuilder url = new StringBuilder(URL_BUFFER_SIZE);
-        
-        if(absolute) {
+
+        if (absolute) {
             url.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
         } else {
             url.append(WebloggerRuntimeConfig.getRelativeContextURL());
         }
-        
+
+        url.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
+
+        if (locale != null) {
+            url.append(locale).append('/');
+        }
+
+        return url.append(URLUtilities.getQueryString(params)).toString();
+    }
+
+    private String buildCollectionURL(Weblog weblog, String locale, String category, String dateString, List<String> tags, int pageNum, boolean absolute, Map<String, String> params) {
+        StringBuilder pathinfo = new StringBuilder(URL_BUFFER_SIZE);
+
+        if (absolute) {
+            pathinfo.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
+        } else {
+            pathinfo.append(WebloggerRuntimeConfig.getRelativeContextURL());
+        }
+
+        pathinfo.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
+
+        if (locale != null) {
+            pathinfo.append(locale).append('/');
+        }
+
+        String cat;
+        if ("root".equals(category)) {
+            cat = null;
+        } else {
+            cat = category;
+        }
+
+        if (cat != null && dateString == null) {
+            pathinfo.append("category/").append(URLUtilities.encodePath(cat));
+
+        } else if (dateString != null && cat == null) {
+            pathinfo.append("date/").append(dateString);
+
+        } else if (tags != null && !tags.isEmpty()) {
+            pathinfo.append("tags/").append(URLUtilities.getEncodedTagsString(tags));
+        }
+
+        return pathinfo.append(URLUtilities.getQueryString(params)).toString();
+    }
+
+    private String buildPageURL(Weblog weblog, String locale, String pageLink, boolean absolute, Map<String, String> params) {
+        StringBuilder pathinfo = new StringBuilder(URL_BUFFER_SIZE);
+
+        if (absolute) {
+            pathinfo.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
+        } else {
+            pathinfo.append(WebloggerRuntimeConfig.getRelativeContextURL());
+        }
+
+        pathinfo.append(PREVIEW_URL_SEGMENT).append(weblog.getHandle()).append('/');
+
+        if (locale != null) {
+            pathinfo.append(locale).append('/');
+        }
+
+        pathinfo.append("page/").append(pageLink);
+
+        return pathinfo.append(URLUtilities.getQueryString(params)).toString();
+    }
+
+    private String buildResourceURL(Weblog weblog, String filePath, boolean absolute, Map<String, String> params) {
+        StringBuilder url = new StringBuilder(URL_BUFFER_SIZE);
+
+        if (absolute) {
+            url.append(WebloggerRuntimeConfig.getAbsoluteContextURL());
+        } else {
+            url.append(WebloggerRuntimeConfig.getRelativeContextURL());
+        }
+
         url.append("/roller-ui/authoring/previewresource/").append(weblog.getHandle()).append('/');
-        
-        if(filePath.startsWith("/")) {
+
+        if (filePath.startsWith("/")) {
             url.append(filePath.substring(1));
         } else {
             url.append(filePath);
         }
-        
-        Map<String, String> params = Collections.emptyMap();
-        if(previewTheme != null && !WeblogTheme.CUSTOM.equals(previewTheme)) {
-            params = Map.of("theme", URLUtilities.encode(previewTheme));
-        }
-        
+
         return url.append(URLUtilities.getQueryString(params)).toString();
     }
-    
 }
